# FSE570

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
agents/lead_agent/: __init__.py  orchestrator.py
agents/lead_agent/context_manager/: __init__.py  context.py
agents/lead_agent/entity_resolution/: __init__.py  resolver.py
agents/lead_agent/task_planner/: __init__.py  planner.py  types.py
agents/specialist_agents/: __init__.py  base.py
agents/specialist_agents/corporate_agent/: __init__.py  agent.py
app/: README.md  __init__.py  app.py  pipeline.py
app/templates/: base.html  index.html  results.html
docs/: EVIDENCE_AS_INPUT.md  IMPLEMENTATION_PLAN.md  QUAD_CHART.md  WALKTHROUGH.md  data_sources.md  schema.md
knowledge_graph/: __init__.py  graph.py  types.py
mcp_layer/: __init__.py  base.py  evidence_loader.py
mcp_layer/nhtsa_processor/: __init__.py  processor.py
mcp_layer/sec_edgar_processor/: __init__.py  processor.py
output_layer/audit_trail/: __init__.py  logger.py
output_layer/evidence_report_generator/: __init__.py  report.py
output_layer/risk_dashboard/: __init__.py  dashboard.py  types.py
reflexion_layer/: __init__.py
reflexion_layer/confidence_module/: __init__.py  scorer.py  types.py
reflexion_layer/cross_check/: __init__.py  checker.py  types.py
reflexion_layer/gap_detection/: __init__.py  detector.py  types.py
scripts/: build_evidence_tesla.py  pull_nhtsa_recalls.py  pull_sec_submissions.py  run_lead_agent.py
src/osint_swarm/: __init__.py  entities.py
tests/: conftest.py
(+40 files in other folders)
